fix out of place remember me section

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,11 +41,6 @@ input {
     text-decoration: underline;
 }
 
-#rememberMe {
-    display: flex;
-    justify-content: center;
-}
-
 ul {
     position: fixed;
     top: 0;
